Adjusts docker-dev setup to match docker-prod setup

--- a/client/docker/Dockerfile.dev
+++ b/client/docker/Dockerfile.dev
@@ -3,7 +3,8 @@ FROM node:16
 WORKDIR /app
 
 COPY package.json .
-RUN npm install
+COPY package-lock.json .
+RUN npm ci
 RUN npm run postinstall
 
 COPY . .
