some small changes to make the stuff run without errorswq

--- a/docker/.env
+++ b/docker/.env
@@ -17,11 +17,11 @@
 # is 127.0.0.1
 # If you do not have any port-changing proxies, this setting should be kept in
 # sync with the EXTERNAL_*_PORTS below
-INSTANCE_DOMAIN=
+INSTANCE_DOMAIN=openslides.pbwonline.de
 
 # The schema (http or https) to use for generating public links. The default
 # is https.
-INSTANCE_URL_SCHEME=
+INSTANCE_URL_SCHEME=https
 
 # The ports the setup binds to to listen for http/https requests. To not bind
 # to http or https, leave the port empty. Behavior of port-combinations:
@@ -31,7 +31,7 @@ INSTANCE_URL_SCHEME=
 # - If exactly one port is set, the server listens to the given port.
 # If the https port is set, there must be a ssl certificate. See the README
 # for more information.
-EXTERNAL_HTTP_PORT=
+EXTERNAL_HTTP_PORT=4001
 EXTERNAL_HTTPS_PORT=
 
 # A list of hosts, that are allowed to accept. If there is a not accepted host,
@@ -41,7 +41,7 @@ EXTERNAL_HTTPS_PORT=
 ALLOWED_HOSTS=
 
 # The name for the docker stack used.
-PROJECT_STACK_NAME=
+PROJECT_STACK_NAME=ldv
 
 # The default registry. Defaults to "openslides".
 DEFAULT_DOCKER_REGISTRY=
@@ -92,8 +92,8 @@ POSTFIX_RELAYHOST=
 # -----------------------------------------
 # Features
 ENABLE_SAML=
-ENABLE_ELECTRONIC_VOTING=
-ENABLE_CHAT=
+ENABLE_ELECTRONIC_VOTING=true
+ENABLE_CHAT=false
 DEMO_USERS=
 
 # Connections
@@ -110,12 +110,11 @@ MEDIAFILE_DATABASE_PASSWORD=
 MEDIAFILE_DATABASE_HOST=
 MEDIAFILE_DATABASE_PORT=
 MEDIAFILE_DATABASE_TABLENAME=
-EMAIL_HOST=
-EMAIL_HOST_PASSWORD=
-EMAIL_HOST_USER=
-EMAIL_PORT=
+EMAIL_HOST=mx2e54.netcup.net
+EMAIL_HOST_USER=noreply@apfelkuchen-villa.de
+EMAIL_PORT=587
 EMAIL_USE_SSL=
-EMAIL_USE_TLS=
+EMAIL_USE_TLS=true
 EMAIL_TIMEOUT=
 JITSI_DOMAIN=
 JITSI_ROOM_PASSWORD=
@@ -133,4 +132,4 @@ SERVER_SETUP_PORT=
 # Logging
 DJANGO_LOG_LEVEL=
 OPENSLIDES_LOG_LEVEL=
-RESET_PASSWORD_VERBOSE_ERRORS=
+RESET_PASSWORD_VERBOSE_ERRORS=true
