Updated services + Add OpenTelemetry
OpenTelemetry now available in dev mode.
 -> run `make run-dev-otel`
As of now backend and datastore report spans.

--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -179,6 +179,7 @@ services:
       - VOTE_DATABASE_NAME=openslides
       - AUTH=ticket
       - AUTH_HOST=auth
+      - VOTE_DISABLE_LOG=true
     volumes:
       - ../openslides-vote-service/cmd:/root/cmd
       - ../openslides-vote-service/internal:/root/internal
