Share redis port to host

--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -139,6 +139,8 @@ services:
 
   message-bus:
     image: redis:latest
+    ports:
+      - "6379:6379"
 
   proxy:
     image: openslides-proxy-dev
