Use import-events from DS + improvements

--- a/docker/services.env
+++ b/docker/services.env
@@ -6,6 +6,9 @@ DATASTORE_READER_PORT=9010
 DATASTORE_WRITER_HOST=datastore-writer
 DATASTORE_WRITER_PORT=9011
 DATASTORE_DATABASE_HOST=postgres
+DATASTORE_DATABASE_USER=openslides
+DATASTORE_DATABASE_PASSWORD=openslides
+DATASTORE_DATABASE_NAME=openslides
 
 ACTION_HOST=backend
 ACTION_PORT=9002
