--- a/.github/workflows/build_images.yml
+++ b/.github/workflows/build_images.yml
@@ -3,7 +3,7 @@ name: Build Docker images for all OpenSlides services
 on: [push, workflow_dispatch]
 
 env:
-  IMAGE_VERSION: 4.0.0-beta
+  IMAGE_VERSION: 4.0.0-rc
   TAG_SUFFIX: -$(date +%Y%m%d)-${GITHUB_SHA::7}
 jobs:
   build:
