--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -7,10 +7,10 @@ jobs:
   test-server:
     runs-on: ubuntu-latest
     env:
-      USING_COVERAGE: "3.6,3.8"
+      USING_COVERAGE: "3.7,3.8"
     strategy:
       matrix:
-        python-version: ["3.6", "3.7", "3.8"]
+        python-version: ["3.7", "3.8"]
     defaults:
       run:
         working-directory: ./server
