--- a/.github/workflows/test-integration.yml
+++ b/.github/workflows/test-integration.yml
@@ -1,10 +1,10 @@
 ---
-name: Run integration tests (cypress)
+name: Run integration tests
 on: [push, pull_request]
 
 jobs:
-  run-cypress:
-    name: 'Runs integration tests in cypress'
+  run-tests:
+    name: 'Runs integration tests'
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
