--- a/.github/workflows/build_images.yml
+++ b/.github/workflows/build_images.yml
@@ -3,8 +3,9 @@ name: Build Docker images for all OpenSlides services
 on: [push, workflow_dispatch]
 
 env:
-  IMAGE_VERSION: 4.0.0
-  TAG_SUFFIX: ""
+  IMAGE_VERSION: 4.1.0-main
+  TAG_SUFFIX: -$(date +%Y%m%d)-${GITHUB_SHA::7}
+
 jobs:
   build:
     name: Builds Docker images
