--- a/docker/services.env
+++ b/docker/services.env
@@ -1,4 +1,4 @@
-MESSAGE_BUS_HOST=message-bus
+MESSAGE_BUS_HOST=redis
 MESSAGE_BUS_PORT=6379
 
 DATASTORE_READER_HOST=datastore-reader
@@ -20,12 +20,12 @@ AUTOUPDATE_PORT=9012
 
 AUTH_HOST=auth
 AUTH_PORT=9004
-CACHE_HOST=cache
+CACHE_HOST=redis
 CACHE_PORT=6379
 
 ICC_PORT=9007
 ICC_HOST=icc
-ICC_REDIS_HOST=message-bus
+ICC_REDIS_HOST=redis
 ICC_REDIS_PORT=6379
 
 MEDIA_HOST=media
@@ -38,7 +38,7 @@ MANAGE_PORT=9008
 
 VOTE_HOST=vote
 VOTE_PORT=9013
-VOTE_REDIS_HOST=cache
+VOTE_REDIS_HOST=redis
 VOTE_DATABASE_HOST=postgres
 VOTE_DATABASE_USER=openslides
 VOTE_DATABASE_PASSWORD=openslides
