Use new ports in docker-compose and README

--- a/dev/docker/docker-compose.dev.yml
+++ b/dev/docker/docker-compose.dev.yml
@@ -154,7 +154,8 @@ services:
       - backend
       - autoupdate
     ports:
-      - "8000:8000"
+      - "8000:443"
+      - "8000:443/udp"
 
   mailhog:
     image: mailhog/mailhog
