--- a/dev/docker/services.env
+++ b/dev/docker/services.env
@@ -10,6 +10,11 @@ DATASTORE_DATABASE_USER=openslides
 DATASTORE_DATABASE_PASSWORD=openslides
 DATASTORE_DATABASE_NAME=openslides
 
+OPENSLIDES_DB_HOST=postgres
+OPENSLIDES_DB_USER=openslides
+OPENSLIDES_DB_PASSWORD=openslides
+OPENSLIDES_DB=openslides
+
 ACTION_HOST=backend
 ACTION_PORT=9002
 PRESENTER_HOST=backend
@@ -17,6 +22,9 @@ PRESENTER_PORT=9003
 
 AUTOUPDATE_HOST=autoupdate
 AUTOUPDATE_PORT=9012
+
+OPENSLIDES_SEARCH_HOST=search
+OPENSLIDES_SEARCH_PORT=9050
 
 AUTH_HOST=auth
 AUTH_PORT=9004
