--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,7 @@
 	path = openslides-vote-service
 	url = https://github.com/OpenSlides/openslides-vote-service.git
 	branch = main
+[submodule "openslides-search-service"]
+	path = openslides-search-service
+	url = https://github.com/OpenSlides/openslides-search-service.git
+	branch = main
