--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -1,6 +1,9 @@
 ---
 name: Build Docker images for all OpenSlides services
-on: [push, workflow_dispatch]
+on:
+  push:
+    branches: [ main ]
+  workflow_dispatch:
 
 env:
   IMAGE_VERSION: 4.0.1-main
