add restricter url config

--- a/dev/docker/services.env
+++ b/dev/docker/services.env
@@ -25,6 +25,7 @@ AUTOUPDATE_PORT=9012
 
 OPENSLIDES_SEARCH_HOST=search
 OPENSLIDES_SEARCH_PORT=9050
+OPENSLIDES_RESTRICTER=http://autoupdate:9012/internal/autoupdate/restrict_fqids
 
 AUTH_HOST=auth
 AUTH_PORT=9004
