--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -2,7 +2,7 @@
 name: Build Docker images for all OpenSlides services
 on:
   push:
-    branches: [ main, staging ]
+    branches: [ main, stable ]
   workflow_dispatch:
 
 jobs:
