--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -38,5 +38,15 @@ jobs:
 
       - name: Build and push image
         run: |
-          ./dev/docker/build.sh --ask-push --yes -D ghcr.io/openslides/openslides ${{ matrix.service.name }}
-          ./dev/docker/build.sh --ask-push --yes -D ghcr.io/openslides/openslides -t latest ${{ matrix.service.name }}
+          DOCKER_REPO=ghcr.io/${{ github.repository }}
+          # Change all uppercase to lowercase
+          DOCKER_REPO=$(echo $DOCKER_REPO | tr '[A-Z]' '[a-z]')
+
+          # Build and push with tag determined by build.sh
+          ./dev/docker/build.sh -D $DOCKER_REPO ${{ matrix.service.name }}
+          docker push $(./dev/docker/build.sh -D $DOCKER_REPO --images ${{ matrix.service.name }})
+          # Build and push with tag 'latest' (when on stable branch)
+          case "$(git rev-parse --abbrev-ref HEAD)" in stable/4*)
+            ./dev/docker/build.sh -D $DOCKER_REPO -t latest ${{ matrix.service.name }}
+            docker push $(./dev/docker/build.sh -D $DOCKER_REPO -t latest --images ${{ matrix.service.name }})
+          esac
