--- a/server/docker/Dockerfile.dev
+++ b/server/docker/Dockerfile.dev
@@ -1,4 +1,4 @@
-FROM python:3.7-slim AS base
+FROM python:3.7-slim-bullseye AS base
 
 # Variables relevant for CMD
 ENV DJANGO_SETTINGS_MODULE settings
