Update search service env

--- a/dev/docker/services.env
+++ b/dev/docker/services.env
@@ -10,11 +10,6 @@ DATABASE_NAME=openslides
 DATABASE_USER=openslides
 DATABASE_PASSWORD=openslides
 
-OPENSLIDES_DB_HOST=postgres
-OPENSLIDES_DB_USER=openslides
-OPENSLIDES_DB_PASSWORD=openslides
-OPENSLIDES_DB=openslides
-
 ACTION_HOST=backend
 ACTION_PORT=9002
 PRESENTER_HOST=backend
@@ -23,9 +18,9 @@ PRESENTER_PORT=9003
 AUTOUPDATE_HOST=autoupdate
 AUTOUPDATE_PORT=9012
 
-SEARCH_SERVICE_HOST=search
-OPENSLIDES_SEARCH_PORT=9050
-OPENSLIDES_RESTRICTER=http://autoupdate:9012/internal/autoupdate
+SEARCH_HOST=search
+SEARCH_PORT=9050
+RESTRICTER_URL=http://autoupdate:9012/internal/autoupdate
 
 AUTH_HOST=auth
 AUTH_PORT=9004
