outsource proxy to its own submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 	path = openslides-vote-service
 	url = https://github.com/OpenSlides/openslides-vote-service.git
 	branch = main
+[submodule "openslides-proxy"]
+	path = openslides-proxy
+	url = https://github.com/OpenSlides/openslides-proxy.git
