--- a/dev/localprod/config.yml
+++ b/dev/localprod/config.yml
@@ -6,7 +6,7 @@ defaults:
 services:
   proxy:
     additionalContent:
-      build: ../../proxy/
+      build: ../../openslides-proxy/
   client:
     additionalContent:
       build: ../../openslides-client/
