--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -10,6 +10,8 @@ on:
 jobs:
   build:
     name: Builds Docker images
+    outputs:
+      openslides-version: ${{ steps.readversion.outputs.version }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -32,6 +34,10 @@ jobs:
         with:
           submodules: true
 
+      - name: Read version
+        id: readversion
+        run: echo "version=$(cat VERSION)" >> "$GITHUB_OUTPUT"
+
       - name: Log into registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" |
           docker login ghcr.io --username ${{ github.actor }} --password-stdin
@@ -50,3 +56,22 @@ jobs:
             ./dev/docker/build.sh -D $DOCKER_REPO -t latest ${{ matrix.service.name }}
             docker push $(./dev/docker/build.sh -D $DOCKER_REPO -t latest --images ${{ matrix.service.name }})
           esac
+
+  dispatch-build-manage-tool:
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref_name, 'stable/4')
+    needs: build
+    steps:
+      - name: Generate access token
+        uses: tibdex/github-app-token@v1
+        id: generate-token
+        with:
+          app_id: ${{ secrets.AUTOMATION_APP_ID }}
+          private_key: ${{ secrets.AUTOMATION_APP_PRIVATE_KEY }}
+      - name: Send dispatch to openslides-manage
+        uses: peter-evans/repository-dispatch@v2
+        with:
+          event-type: stable-update
+          repository: ${{ github.repository_owner }}/openslides-manage-service
+          token: ${{ steps.generate-token.outputs.token }}
+          client-payload: '{"branch": "${{ github.ref_name }}", "version": "${{ needs.build.outputs.openslides-version }}"}'
