add search-service (#6569)
* add search-service

* add restricter url config

* update search service

* add search service to image build

* update search service caddy config

* update localprod config

* change search service host env var name

* update services to feature branches

* update search service

* update services

* Update restricter URL

* Update search service env

* Don't update submods in this branch

* Revert proxy changes - it is now a separate repo

* Add search as default target in build.sh

* Properly add search submod

not really sure what was wrong before ...

* Increase wait time in test action

---------

Co-authored-by: Bastian Rihm <Bastian Rihm brihm@intevation.de>
Co-authored-by: Adrian Richter <adrian@intevation.de>

--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -23,6 +23,7 @@ jobs:
           - name: datastore-writer
           - name: autoupdate
           - name: auth
+          - name: search
           - name: vote
           - name: icc
           - name: media
