--- a/dev/docker/services.env
+++ b/dev/docker/services.env
@@ -18,6 +18,10 @@ PRESENTER_PORT=9003
 AUTOUPDATE_HOST=autoupdate
 AUTOUPDATE_PORT=9012
 
+SEARCH_HOST=search
+SEARCH_PORT=9050
+RESTRICTER_URL=http://autoupdate:9012/internal/autoupdate
+
 AUTH_HOST=auth
 AUTH_PORT=9004
 CACHE_HOST=redis
