Add auth OTEL setup

--- a/dev/docker/dc.otel.dev.yml
+++ b/dev/docker/dc.otel.dev.yml
@@ -23,3 +23,7 @@ services:
   datastore-writer:
     environment:
       - OPENTELEMETRY_ENABLED=1
+
+  auth:
+    environment:
+      - OPENTELEMETRY_ENABLED=1
