Checkout submodules recursively in build pipeline

--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v2
         with:
-          submodules: true
+          submodules: recursive
 
       - name: Read version
         id: readversion
