Use local example data copy instead of GitHub link

--- a/dev/docker/docker-compose.dev.yml
+++ b/dev/docker/docker-compose.dev.yml
@@ -23,9 +23,10 @@ services:
     volumes:
       - ../../openslides-datastore-service/datastore:/app/datastore
       - ../../openslides-datastore-service/cli:/app/cli
+      - ../../openslides-backend/global/data:/app/data
     environment:
       - COMMAND=create_initial_data
-      - DATASTORE_INITIAL_DATA_FILE=https://raw.githubusercontent.com/OpenSlides/openslides-backend/main/global/data/example-data.json
+      - DATASTORE_INITIAL_DATA_FILE=/app/data/example-data.json
       - OPENSLIDES_DEVELOPMENT=1
     ports:
       - 9011:9011
