--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -3,7 +3,7 @@ name: Build Docker images for all OpenSlides services
 on:
   push:
     branches:
-      - main
+      - staging/4*
       - stable/4*
   workflow_dispatch:
 
