Do no overwrite superadmin password

--- a/.github/workflows/test-integration.yml
+++ b/.github/workflows/test-integration.yml
@@ -26,6 +26,7 @@ jobs:
         working-directory: "./dev/localprod"
         run: |
           ./setup.sh
+          rm secrets/superadmin
           docker compose build --parallel
           docker compose up -d
 
