--- a/.github/workflows/test-integration.yml
+++ b/.github/workflows/test-integration.yml
@@ -12,12 +12,6 @@ jobs:
         with:
           submodules: recursive
 
-      - name: Build local openslides tool
-        working-directory: "./openslides-manage-service"
-        run: |
-          go build ./cmd/openslides
-          cp openslides ../dev/localprod/.
-
       - name: Use example data instead of initial data
         working-directory: "./openslides-backend/global/data/"
         run: cp example-data.json initial-data.json
@@ -26,7 +20,7 @@ jobs:
         working-directory: "./dev/localprod"
         run: |
           ./setup.sh
-          rm secrets/superadmin
+          echo -n "admin" > secrets/superadmin
           docker compose build --parallel
           docker compose up -d
 
